apps/teslamate/grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate-grafana
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app.kubernetes.io/name: teslamate-grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: teslamate-grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: teslamate-grafana
        app.kubernetes.io/component: dashboards
    spec:
      securityContext:
        fsGroup: 472
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: grafana
          image: teslamate/grafana:4.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 0
            runAsUser: 472
          volumeMounts:
            - name: yasr
              mountPath: /var/lib/grafana
              subPath: configs/teslamate/grafana
      volumes:
        - name: yasr
          persistentVolumeClaim:
            claimName: yasr-volume
