apps/teslamate/teslamate.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate
spec:
  ports:
    - name: http
      port: 4000
      targetPort: http
  selector:
    app.kubernetes.io/name: teslamate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: teslamate
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: teslamate
        app.kubernetes.io/component: logger
    spec:
      securityContext:
        fsGroup: 10001
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: teslamate
          image: teslamate/teslamate:4.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4000
          startupProbe:
            httpGet:
              path: /health_check
              port: http
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health_check
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health_check
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsGroup: 10001
            runAsUser: 10000
          volumeMounts:
            - name: yasr
              mountPath: /opt/app/import
              subPath: configs/teslamate/import
      volumes:
        - name: yasr
          persistentVolumeClaim:
            claimName: yasr-volume
